--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
     <title>Koliseum Academy</title>
   </head>
   <body>
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"
+    ></script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
